// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > should closed by the Esc key 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should not render if not open 1`] = `<DocumentFragment />`;

exports[`Modal > should render a 3x large one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-3xl"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render a 4x large one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-4xl"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render a 5x large one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-5xl"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render a large one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-lg"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render a medium one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-md"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render a modal with banner 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <div
              class="relative -mx-10 -mt-10 mb-10 h-56"
            >
              <div
                class="absolute bottom-0 left-0 mb-10 ml-10"
              >
                <h2
                  class="m-0 text-4xl leading-tight font-extrabold text-theme-text"
                >
                  ark
                </h2>
              </div>
            </div>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render a modal with content 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render a modal with description 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              This is the Modal description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render a modal with overlay 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render a modal with overlay 2`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render a small one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-sm"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render a xlarge one 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-xl"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > should render with scrollbar if it exceeds window height 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render without close button 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal > should render without offset for buttons 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-black-rgba/40 dark:bg-opacity-80 dim:bg-theme-dim-950/40 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl pb-24 sm:pb-0"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg"
            >
              ark
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            This is the Modal content
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
